[gd_scene load_steps=14 format=3 uid="uid://bpchc1afv3hyq"]

[ext_resource type="Script" path="res://ui/scripts/Inventory_trade_head.gd" id="1_8em8o"]
[ext_resource type="Script" path="res://ui/scripts/Inv_Trade_Right_Panel.gd" id="2_kv2lh"]
[ext_resource type="FontFile" uid="uid://dbcudhplm1jri" path="res://ui/FreeMonoBold.ttf" id="2_olytw"]
[ext_resource type="ButtonGroup" uid="uid://b4bu3vkwq0vxa" path="res://ui/inv_sort_buttons.tres" id="3_piwcw"]
[ext_resource type="Script" path="res://ui/scripts/NodeLootContainer.gd" id="4_r0u03"]
[ext_resource type="Script" path="res://ui/scripts/Inv_Trade_Left_Panel.gd" id="5_ygdat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmpnv"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo7l5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hig1n"]
bg_color = Color(0.00229193, 7.99982e-05, 0.000742371, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hglyh"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aivln"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tjsj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjxvq"]
content_margin_left = 19.0
content_margin_top = 9.0
content_margin_right = 19.0
content_margin_bottom = 9.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Inventory_trade" type="Control"]
process_mode = 3
top_level = true
z_index = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_8em8o")

[node name="Right_Panel" type="Panel" parent="."]
top_level = true
z_index = 6
layout_mode = 0
offset_left = 1113.0
offset_top = 71.0
offset_right = 1888.0
offset_bottom = 729.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_mmpnv")
script = ExtResource("2_kv2lh")

[node name="RightVBox" type="VBoxContainer" parent="Right_Panel"]
z_index = 4
layout_mode = 1
anchors_preset = -1
anchor_top = -0.00786517
anchor_bottom = -0.00786517
offset_left = 20.0
offset_top = 74.0
offset_right = 763.0
offset_bottom = 194.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_use_anchors_ = true

[node name="FilterBar" type="HBoxContainer" parent="Right_Panel/RightVBox"]
z_index = 4
layout_mode = 2
mouse_filter = 2

[node name="All" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " ALL "

[node name="Weap" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " GEAR "

[node name="Arm" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " ARMOR "

[node name="Con" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " CONSUMABLES "

[node name="Mats" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " MATERIALS "

[node name="Loot" type="Button" parent="Right_Panel/RightVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " LOOT "

[node name="GridFrame" type="Panel" parent="."]
z_index = 3
clip_contents = true
layout_mode = 2
offset_left = 1123.0
offset_top = 154.0
offset_right = 1877.0
offset_bottom = 805.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_hig1n")

[node name="InvScroll" type="ScrollContainer" parent="GridFrame"]
z_index = 5
layout_mode = 0
offset_left = 13.0
offset_top = 25.0
offset_right = 739.0
offset_bottom = 598.0
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_hglyh")
scroll_horizontal_custom_step = 40.0
scroll_vertical_custom_step = 64.0
vertical_scroll_mode = 2

[node name="GridPadding" type="MarginContainer" parent="GridFrame/InvScroll"]
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GridFrame/InvScroll/GridPadding"]
z_index = 4
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="InventoryGrid" type="GridContainer" parent="GridFrame/InvScroll/GridPadding/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
columns = 5

[node name="SortBar" type="HBoxContainer" parent="."]
top_level = true
z_index = 9
layout_mode = 1
anchors_preset = -1
anchor_top = -0.12037
anchor_bottom = -0.12037
offset_left = 1133.0
offset_top = 886.0
offset_right = 1872.0
offset_bottom = 929.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="SortLabel" type="Label" parent="SortBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_olytw")
theme_override_font_sizes/font_size = 20
text = "Sort:"

[node name="New" type="Button" parent="SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " New "
flat = true

[node name="Alpha" type="Button" parent="SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = "Name"
flat = true

[node name="Weight" type="Button" parent="SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " Weight "
flat = true

[node name="Value" type="Button" parent="SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " Value "
flat = true

[node name="Container_control" type="Control" parent="."]
process_mode = 3
top_level = true
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 597.0
offset_top = 144.0
offset_right = -1101.0
offset_bottom = -298.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left_Panel" type="Panel" parent="Container_control"]
top_level = true
z_index = 6
layout_mode = 0
offset_left = 48.0
offset_top = 71.0
offset_right = 823.0
offset_bottom = 729.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_mmpnv")
script = ExtResource("5_ygdat")

[node name="LeftVBox" type="VBoxContainer" parent="Container_control/Left_Panel"]
z_index = 4
layout_mode = 1
anchors_preset = -1
anchor_top = -0.00786517
anchor_bottom = -0.00786517
offset_left = 20.0
offset_top = 74.0
offset_right = 763.0
offset_bottom = 194.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_use_anchors_ = true

[node name="FilterBar" type="HBoxContainer" parent="Container_control/Left_Panel/LeftVBox"]
z_index = 4
layout_mode = 2
mouse_filter = 2

[node name="All" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " ALL "

[node name="Weap" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " GEAR "

[node name="Arm" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " ARMOR "

[node name="Con" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " CONSUMABLES "

[node name="Mats" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " MATERIALS "

[node name="Loot" type="Button" parent="Container_control/Left_Panel/LeftVBox/FilterBar"]
layout_mode = 2
size_flags_stretch_ratio = 1.85
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_bo7l5")
text = " LOOT "

[node name="GridFrame" type="Panel" parent="Container_control"]
z_index = 3
clip_contents = true
layout_mode = 0
offset_left = -543.0
offset_top = 10.0
offset_right = 211.0
offset_bottom = 661.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_hig1n")

[node name="InvScroll" type="ScrollContainer" parent="Container_control/GridFrame"]
z_index = 5
layout_mode = 0
offset_left = 13.0
offset_top = 25.0
offset_right = 739.0
offset_bottom = 598.0
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_hglyh")
scroll_horizontal_custom_step = 40.0
scroll_vertical_custom_step = 64.0
vertical_scroll_mode = 2

[node name="GridPadding" type="MarginContainer" parent="Container_control/GridFrame/InvScroll"]
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Container_control/GridFrame/InvScroll/GridPadding"]
z_index = 4
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="InventoryGrid" type="GridContainer" parent="Container_control/GridFrame/InvScroll/GridPadding/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
columns = 5

[node name="SortBar" type="HBoxContainer" parent="Container_control"]
top_level = true
z_index = 9
layout_mode = 1
anchors_preset = -1
anchor_top = -0.12037
anchor_bottom = -0.12037
offset_left = 89.0
offset_top = 886.0
offset_right = 828.0
offset_bottom = 929.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="SortLabel" type="Label" parent="Container_control/SortBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_olytw")
theme_override_font_sizes/font_size = 20
text = "Sort:"

[node name="New" type="Button" parent="Container_control/SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " New "
flat = true

[node name="Alpha" type="Button" parent="Container_control/SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = "Name"
flat = true

[node name="Weight" type="Button" parent="Container_control/SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " Weight "
flat = true

[node name="Value" type="Button" parent="Container_control/SortBar"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_piwcw")
text = " Value "
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.533333)
metadata/_edit_lock_ = true

[node name="PurchaseWindow" type="Control" parent="."]
process_mode = 3
top_level = true
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 821.0
offset_right = -825.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Panel" parent="PurchaseWindow"]
top_level = true
z_index = 13
layout_mode = 0
offset_left = 52.0
offset_top = 833.0
offset_right = 963.0
offset_bottom = 1053.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aivln")
script = ExtResource("4_r0u03")

[node name="ScrollContainer" type="ScrollContainer" parent="PurchaseWindow/PanelContainer"]
layout_mode = 0
offset_left = 10.0
offset_top = 46.0
offset_right = 897.0
offset_bottom = 199.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1tjsj")

[node name="MarginContainer" type="MarginContainer" parent="PurchaseWindow/PanelContainer/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PurchaseWindow/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PurchaseWindow/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PurchaseWindow/PanelContainer"]
layout_mode = 2
offset_left = 13.0
offset_top = 15.0
offset_right = 458.0
offset_bottom = 77.0
text = "MY PURCHASES"

[node name="SellWindow" type="Control" parent="."]
process_mode = 3
top_level = true
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 967.0
offset_top = 832.0
offset_right = -40.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Panel" parent="SellWindow"]
top_level = true
z_index = 13
layout_mode = 0
offset_left = 968.0
offset_top = 833.0
offset_right = 1879.0
offset_bottom = 1053.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aivln")
script = ExtResource("4_r0u03")

[node name="ScrollContainer" type="ScrollContainer" parent="SellWindow/PanelContainer"]
layout_mode = 0
offset_left = 10.0
offset_top = 46.0
offset_right = 897.0
offset_bottom = 199.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1tjsj")

[node name="MarginContainer" type="MarginContainer" parent="SellWindow/PanelContainer/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SellWindow/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="SellWindow/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SellWindow/PanelContainer"]
layout_mode = 2
offset_left = 13.0
offset_top = 15.0
offset_right = 458.0
offset_bottom = 77.0
text = "MY GOODS TO BARTER"

[node name="GoodsInspectionWindow" type="Control" parent="."]
process_mode = 3
top_level = true
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 819.0
offset_top = 163.0
offset_right = -809.0
offset_bottom = -366.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Panel" parent="GoodsInspectionWindow"]
top_level = true
z_index = 13
layout_mode = 0
offset_left = 821.0
offset_top = 156.0
offset_right = 1109.0
offset_bottom = 723.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aivln")

[node name="Label" type="Label" parent="GoodsInspectionWindow/PanelContainer"]
layout_mode = 2
offset_left = 13.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 58.0
text = "INSPECT THE GOODS"

[node name="MakeDealButton" type="Button" parent="."]
layout_mode = 2
offset_left = 854.0
offset_top = 768.0
offset_right = 1084.0
offset_bottom = 803.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_mjxvq")
text = "Finalize Transaction"

[node name="VendorSatisfaction" type="Label" parent="."]
layout_mode = 2
offset_left = 887.0
offset_top = 737.0
offset_right = 1073.0
offset_bottom = 767.0
text = "DEAL SATISFACTION"
